@@ -1,9 +1,10 @@
+{% load wagtailadmin_tags %}
 (function() {
     var panel = InlinePanel({
         formsetPrefix: "id_{{ self.formset.prefix }}",
         emptyChildFormPrefix: "{{ self.empty_child.form.prefix }}",
         canOrder: {% if can_order %}true{% else %}false{% endif %},
-        maxForms: {{ self.formset.max_num }}
+        maxForms: {{ self.formset.max_num|no_thousand_separator }}
     });
 
     {% for child in self.children %}
